# isformula

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: pllftree.cpp  pllftree.h  pllfv.cpp  pllfv.h
